[package]
name = "rsrsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version="0.6", features = ["codec"] }
tokio-stream = "0.1"
encoding_rs = "0.8.32"
log = "0.4"
env_logger = "0.10.0"
clap = { version = "4.3.11", features = ["derive"] }
async-trait = "0.1.71"
async-channel = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.28"
url = "2.3.1"
tokio-tungstenite = "0.19.0"
chrono = "0.4.26"
colored = "2.0.4"
job_scheduler = "*"
tokio-cron-scheduler = "*"
serde_yaml = "0.9"
